FIX: Background CSS styling for optgroups ignored on Firefox on macOS. Unsetting the text color to use default styling instead. [t22194]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@14618 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/colour.css
+++ b/css/colour.css
@@ -407,6 +407,16 @@ a.ui-button.plupload_button.ui-button-disabled {
     background-image: url("smoothness/images/ui-icons_777777_256x240.png");
 }
 
+/* Firefox on macOS optgroup background styling fix */
+@supports (-moz-osx-font-smoothing: auto) {
+    #CollectionDiv select optgroup {
+        color: initial;
+    }
+    #CollectionDiv select optgroup option {
+        color: #fff;    
+    }
+}
+
 /* Scrollbar styling */
 ::-webkit-scrollbar:vertical {width:12px;}
 ::-webkit-scrollbar:horizonal {height:12px;}
